# tc_regulation

./: .gitignore  README.md  alira_agent_architecture.md  env.example  pyproject.toml
.streamlit/: config.toml  secrets.toml
src/agent_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agents/: columns_agent.py  db_context.py  intent.py  sql_agent.py  sql_answer.py  stats_agent.py
src/config/: secure_store.py  settings.py
src/graphs/: chat_graph.py  csv_graph.py
src/history/: store.py
src/ingestion/: analyze.py  csv_ingestor.py  fs_ingestor.py  sql_store.py
src/model/: hchat_client.py  litellm_client.py
src/rag/: base.py  hybrid.py  local.py  sql_search.py
src/schemas/: api.py
src/server/: main.py
src/utils/: logging.py
tests/: test_api_chat.py  test_api_chat_ingest.py  test_api_chat_with_rag.py  test_api_csv.py  test_api_files.py  test_chat_graph.py  test_columns_agent_and_routing.py  test_csv_graph.py  test_csv_korean_stats.py  test_db_context.py  test_hchat_client.py  test_hchat_headers.py  test_hybrid_rag.py  test_ingestion.py  test_intent_sql_agent_and_graph.py  test_litellm_client.py  test_rag_local.py  test_settings.py  test_sql_answer_and_defaults.py  test_sql_search.py  test_stats_agent_and_routing.py  블록우선순위_v0.03.csv
tests/ui/: test_api_client.py
ui/: api_client.py  app.py  components.py
