[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-server"
version = "0.1.0"
description = "LangGraph + LiteLLM Agent Server (MVP)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "tc_reg", email = "dev@example.com" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "litellm>=1.42.10",
  "langgraph>=0.2.39",
  "langchain-core>=0.3.7",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "chromadb>=0.5.5",
  "pandas>=2.2.2",
  "aiofiles>=23.2.1",
  "streamlit>=1.37.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "httpx[http2]>=0.27.0",
  "anyio>=4.4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


